--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-/target
-/classes
-/checkouts
-pom.xml
-pom.xml.asc
-*.jar
 *.class
-/.lein-*
-/.nrepl-port
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.idea
+
+.DS_Store
+*.iml
